parser.output
Terminals which are not used

   TOKEN_ERROR


Rules never reduced

   52 if_block: block


State 38 conflicts: 5 shift/reduce
State 59 conflicts: 5 shift/reduce
State 61 conflicts: 3 shift/reduce
State 63 conflicts: 14 shift/reduce
State 77 conflicts: 1 reduce/reduce
State 79 conflicts: 9 shift/reduce
State 80 conflicts: 3 shift/reduce
State 81 conflicts: 3 shift/reduce
State 82 conflicts: 3 shift/reduce
State 83 conflicts: 3 shift/reduce
State 84 conflicts: 3 shift/reduce
State 85 conflicts: 3 shift/reduce
State 86 conflicts: 3 shift/reduce
State 87 conflicts: 3 shift/reduce
State 88 conflicts: 3 shift/reduce
State 97 conflicts: 9 shift/reduce
State 98 conflicts: 9 shift/reduce
State 99 conflicts: 9 shift/reduce
State 100 conflicts: 9 shift/reduce
State 101 conflicts: 9 shift/reduce
State 102 conflicts: 9 shift/reduce
State 103 conflicts: 9 shift/reduce
State 104 conflicts: 9 shift/reduce
State 105 conflicts: 9 shift/reduce
State 115 conflicts: 10 reduce/reduce
State 117 conflicts: 2 shift/reduce
State 124 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: decVar programa
    2         | decVec programa
    3         | decFun programa
    4         | /* empty */

    5 init: LIT_CHAR
    6     | LIT_INT

    7 tipo: KW_CHAR
    8     | KW_INT

    9 decVar: tipo TK_IDENTIFIER '=' init ';'

   10 decVec: tipo TK_IDENTIFIER '[' LIT_INT ']' VecList

   11 VecList: ';'
   12        | '=' init VecList2

   13 VecList2: init VecList2
   14         | ';'

   15 decFun: tipo TK_IDENTIFIER '(' params ')' block

   16 params: tipo TK_IDENTIFIER tail
   17       | /* empty */

   18 tail: ',' tipo TK_IDENTIFIER tail
   19     | /* empty */

   20 block: '{' list_cmds '}'

   21 list_cmds: cmd list_cmds
   22          | /* empty */

   23 cmd: cmd_if
   24    | cmd_while
   25    | cmd_print
   26    | cmd_read ';'
   27    | cmd_return ';'
   28    | cmd_attr
   29    | block

   30 cmd_func: TK_IDENTIFIER '(' func_params ')'

   31 func_params: expressao func_tail
   32            | /* empty */

   33 func_tail: ',' expressao func_tail
   34          | /* empty */

   35 expressao: LIT_INT
   36          | TK_IDENTIFIER
   37          | TK_IDENTIFIER '[' expressao ']'
   38          | cmd_func
   39          | expressao '+' expressao
   40          | expressao '*' expressao
   41          | expressao '/' expressao
   42          | expressao '-' expressao
   43          | expressao '<' expressao
   44          | expressao '>' expressao
   45          | expressao '=' expressao
   46          | expressao '&' expressao
   47          | expressao '|' expressao
   48          | '~' expressao
   49          | /* empty */

   50 cmd_attr: TK_IDENTIFIER '=' expressao ';'
   51         | TK_IDENTIFIER '[' expressao ']' '=' expressao ';'

   52 if_block: block
   53         | cmd

   54 cmd_if: KW_IF '(' expressao ')' KW_THEN if_block KW_ELSE if_block
   55       | KW_IF '(' expressao ')' KW_THEN if_block KW_ELSE if_block ';'
   56       | KW_IF '(' expressao ')' KW_THEN if_block
   57       | KW_IF '(' expressao ')' KW_THEN if_block ';'

   58 cmd_while: KW_WHILE '(' expressao ')' block

   59 print_args: LIT_STRING print_args
   60           | expressao print_args
   61           | ';'

   62 cmd_read: KW_READ TK_IDENTIFIER

   63 cmd_print: KW_PRINT print_args

   64 cmd_return: KW_RETURN expressao


Terminals, with rules where they appear

$end (0) 0
'&' (38) 46
'(' (40) 15 30 54 55 56 57 58
')' (41) 15 30 54 55 56 57 58
'*' (42) 40
'+' (43) 39
',' (44) 18 33
'-' (45) 42
'/' (47) 41
';' (59) 9 11 14 26 27 50 51 55 57 61
'<' (60) 43
'=' (61) 9 12 45 50 51
'>' (62) 44
'[' (91) 10 37 51
']' (93) 10 37 51
'{' (123) 20
'|' (124) 47
'}' (125) 20
'~' (126) 48
error (256)
KW_CHAR (258) 7
KW_INT (259) 8
KW_IF (260) 54 55 56 57
KW_THEN (261) 54 55 56 57
KW_ELSE (262) 54 55
KW_WHILE (263) 58
KW_READ (264) 62
KW_PRINT (265) 63
KW_RETURN (266) 64
TK_IDENTIFIER (267) 9 10 15 16 18 30 36 37 50 51 62
LIT_INT (268) 6 10 35
LIT_CHAR (269) 5
LIT_STRING (270) 59
TOKEN_ERROR (271)


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
programa (36)
    on left: 1 2 3 4, on right: 0 1 2 3
init (37)
    on left: 5 6, on right: 9 12 13
tipo (38)
    on left: 7 8, on right: 9 10 15 16 18
decVar (39)
    on left: 9, on right: 1
decVec (40)
    on left: 10, on right: 2
VecList (41)
    on left: 11 12, on right: 10
VecList2 (42)
    on left: 13 14, on right: 12 13
decFun (43)
    on left: 15, on right: 3
params (44)
    on left: 16 17, on right: 15
tail (45)
    on left: 18 19, on right: 16 18
block (46)
    on left: 20, on right: 15 29 52 58
list_cmds (47)
    on left: 21 22, on right: 20 21
cmd (48)
    on left: 23 24 25 26 27 28 29, on right: 21 53
cmd_func (49)
    on left: 30, on right: 38
func_params (50)
    on left: 31 32, on right: 30
func_tail (51)
    on left: 33 34, on right: 31 33
expressao (52)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49,
    on right: 31 33 37 39 40 41 42 43 44 45 46 47 48 50 51 54 55 56
    57 58 60 64
cmd_attr (53)
    on left: 50 51, on right: 28
if_block (54)
    on left: 52 53, on right: 54 55 56 57
cmd_if (55)
    on left: 54 55 56 57, on right: 23
cmd_while (56)
    on left: 58, on right: 24
print_args (57)
    on left: 59 60 61, on right: 59 60 63
cmd_read (58)
    on left: 62, on right: 26
cmd_print (59)
    on left: 63, on right: 25
cmd_return (60)
    on left: 64, on right: 27


state 0

    0 $accept: . programa $end

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2

    $default  reduce using rule 4 (programa)

    programa  go to state 3
    tipo      go to state 4
    decVar    go to state 5
    decVec    go to state 6
    decFun    go to state 7


state 1

    7 tipo: KW_CHAR .

    $default  reduce using rule 7 (tipo)


state 2

    8 tipo: KW_INT .

    $default  reduce using rule 8 (tipo)


state 3

    0 $accept: programa . $end

    $end  shift, and go to state 8


state 4

    9 decVar: tipo . TK_IDENTIFIER '=' init ';'
   10 decVec: tipo . TK_IDENTIFIER '[' LIT_INT ']' VecList
   15 decFun: tipo . TK_IDENTIFIER '(' params ')' block

    TK_IDENTIFIER  shift, and go to state 9


state 5

    1 programa: decVar . programa

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2

    $default  reduce using rule 4 (programa)

    programa  go to state 10
    tipo      go to state 4
    decVar    go to state 5
    decVec    go to state 6
    decFun    go to state 7


state 6

    2 programa: decVec . programa

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2

    $default  reduce using rule 4 (programa)

    programa  go to state 11
    tipo      go to state 4
    decVar    go to state 5
    decVec    go to state 6
    decFun    go to state 7


state 7

    3 programa: decFun . programa

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2

    $default  reduce using rule 4 (programa)

    programa  go to state 12
    tipo      go to state 4
    decVar    go to state 5
    decVec    go to state 6
    decFun    go to state 7


state 8

    0 $accept: programa $end .

    $default  accept


state 9

    9 decVar: tipo TK_IDENTIFIER . '=' init ';'
   10 decVec: tipo TK_IDENTIFIER . '[' LIT_INT ']' VecList
   15 decFun: tipo TK_IDENTIFIER . '(' params ')' block

    '='  shift, and go to state 13
    '['  shift, and go to state 14
    '('  shift, and go to state 15


state 10

    1 programa: decVar programa .

    $default  reduce using rule 1 (programa)


state 11

    2 programa: decVec programa .

    $default  reduce using rule 2 (programa)


state 12

    3 programa: decFun programa .

    $default  reduce using rule 3 (programa)


state 13

    9 decVar: tipo TK_IDENTIFIER '=' . init ';'

    LIT_INT   shift, and go to state 16
    LIT_CHAR  shift, and go to state 17

    init  go to state 18


state 14

   10 decVec: tipo TK_IDENTIFIER '[' . LIT_INT ']' VecList

    LIT_INT  shift, and go to state 19


state 15

   15 decFun: tipo TK_IDENTIFIER '(' . params ')' block

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2

    $default  reduce using rule 17 (params)

    tipo    go to state 20
    params  go to state 21


state 16

    6 init: LIT_INT .

    $default  reduce using rule 6 (init)


state 17

    5 init: LIT_CHAR .

    $default  reduce using rule 5 (init)


state 18

    9 decVar: tipo TK_IDENTIFIER '=' init . ';'

    ';'  shift, and go to state 22


state 19

   10 decVec: tipo TK_IDENTIFIER '[' LIT_INT . ']' VecList

    ']'  shift, and go to state 23


state 20

   16 params: tipo . TK_IDENTIFIER tail

    TK_IDENTIFIER  shift, and go to state 24


state 21

   15 decFun: tipo TK_IDENTIFIER '(' params . ')' block

    ')'  shift, and go to state 25


state 22

    9 decVar: tipo TK_IDENTIFIER '=' init ';' .

    $default  reduce using rule 9 (decVar)


state 23

   10 decVec: tipo TK_IDENTIFIER '[' LIT_INT ']' . VecList

    '='  shift, and go to state 26
    ';'  shift, and go to state 27

    VecList  go to state 28


state 24

   16 params: tipo TK_IDENTIFIER . tail

    ','  shift, and go to state 29

    $default  reduce using rule 19 (tail)

    tail  go to state 30


state 25

   15 decFun: tipo TK_IDENTIFIER '(' params ')' . block

    '{'  shift, and go to state 31

    block  go to state 32


state 26

   12 VecList: '=' . init VecList2

    LIT_INT   shift, and go to state 16
    LIT_CHAR  shift, and go to state 17

    init  go to state 33


state 27

   11 VecList: ';' .

    $default  reduce using rule 11 (VecList)


state 28

   10 decVec: tipo TK_IDENTIFIER '[' LIT_INT ']' VecList .

    $default  reduce using rule 10 (decVec)


state 29

   18 tail: ',' . tipo TK_IDENTIFIER tail

    KW_CHAR  shift, and go to state 1
    KW_INT   shift, and go to state 2

    tipo  go to state 34


state 30

   16 params: tipo TK_IDENTIFIER tail .

    $default  reduce using rule 16 (params)


state 31

   20 block: '{' . list_cmds '}'

    KW_IF          shift, and go to state 35
    KW_WHILE       shift, and go to state 36
    KW_READ        shift, and go to state 37
    KW_PRINT       shift, and go to state 38
    KW_RETURN      shift, and go to state 39
    TK_IDENTIFIER  shift, and go to state 40
    '{'            shift, and go to state 31

    $default  reduce using rule 22 (list_cmds)

    block       go to state 41
    list_cmds   go to state 42
    cmd         go to state 43
    cmd_attr    go to state 44
    cmd_if      go to state 45
    cmd_while   go to state 46
    cmd_read    go to state 47
    cmd_print   go to state 48
    cmd_return  go to state 49


state 32

   15 decFun: tipo TK_IDENTIFIER '(' params ')' block .

    $default  reduce using rule 15 (decFun)


state 33

   12 VecList: '=' init . VecList2

    LIT_INT   shift, and go to state 16
    LIT_CHAR  shift, and go to state 17
    ';'       shift, and go to state 50

    init      go to state 51
    VecList2  go to state 52


state 34

   18 tail: ',' tipo . TK_IDENTIFIER tail

    TK_IDENTIFIER  shift, and go to state 53


state 35

   54 cmd_if: KW_IF . '(' expressao ')' KW_THEN if_block KW_ELSE if_block
   55       | KW_IF . '(' expressao ')' KW_THEN if_block KW_ELSE if_block ';'
   56       | KW_IF . '(' expressao ')' KW_THEN if_block
   57       | KW_IF . '(' expressao ')' KW_THEN if_block ';'

    '('  shift, and go to state 54


state 36

   58 cmd_while: KW_WHILE . '(' expressao ')' block

    '('  shift, and go to state 55


state 37

   62 cmd_read: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 56


state 38

   63 cmd_print: KW_PRINT . print_args

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    LIT_STRING     shift, and go to state 59
    ';'            shift, and go to state 60
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    LIT_STRING     [reduce using rule 49 (expressao)]
    ';'            [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func    go to state 62
    expressao   go to state 63
    print_args  go to state 64


state 39

   64 cmd_return: KW_RETURN . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    $default  reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 65


state 40

   50 cmd_attr: TK_IDENTIFIER . '=' expressao ';'
   51         | TK_IDENTIFIER . '[' expressao ']' '=' expressao ';'

    '='  shift, and go to state 66
    '['  shift, and go to state 67


state 41

   29 cmd: block .

    $default  reduce using rule 29 (cmd)


state 42

   20 block: '{' list_cmds . '}'

    '}'  shift, and go to state 68


state 43

   21 list_cmds: cmd . list_cmds

    KW_IF          shift, and go to state 35
    KW_WHILE       shift, and go to state 36
    KW_READ        shift, and go to state 37
    KW_PRINT       shift, and go to state 38
    KW_RETURN      shift, and go to state 39
    TK_IDENTIFIER  shift, and go to state 40
    '{'            shift, and go to state 31

    $default  reduce using rule 22 (list_cmds)

    block       go to state 41
    list_cmds   go to state 69
    cmd         go to state 43
    cmd_attr    go to state 44
    cmd_if      go to state 45
    cmd_while   go to state 46
    cmd_read    go to state 47
    cmd_print   go to state 48
    cmd_return  go to state 49


state 44

   28 cmd: cmd_attr .

    $default  reduce using rule 28 (cmd)


state 45

   23 cmd: cmd_if .

    $default  reduce using rule 23 (cmd)


state 46

   24 cmd: cmd_while .

    $default  reduce using rule 24 (cmd)


state 47

   26 cmd: cmd_read . ';'

    ';'  shift, and go to state 70


state 48

   25 cmd: cmd_print .

    $default  reduce using rule 25 (cmd)


state 49

   27 cmd: cmd_return . ';'

    ';'  shift, and go to state 71


state 50

   14 VecList2: ';' .

    $default  reduce using rule 14 (VecList2)


state 51

   13 VecList2: init . VecList2

    LIT_INT   shift, and go to state 16
    LIT_CHAR  shift, and go to state 17
    ';'       shift, and go to state 50

    init      go to state 51
    VecList2  go to state 72


state 52

   12 VecList: '=' init VecList2 .

    $default  reduce using rule 12 (VecList)


state 53

   18 tail: ',' tipo TK_IDENTIFIER . tail

    ','  shift, and go to state 29

    $default  reduce using rule 19 (tail)

    tail  go to state 73


state 54

   54 cmd_if: KW_IF '(' . expressao ')' KW_THEN if_block KW_ELSE if_block
   55       | KW_IF '(' . expressao ')' KW_THEN if_block KW_ELSE if_block ';'
   56       | KW_IF '(' . expressao ')' KW_THEN if_block
   57       | KW_IF '(' . expressao ')' KW_THEN if_block ';'

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    $default  reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 74


state 55

   58 cmd_while: KW_WHILE '(' . expressao ')' block

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    $default  reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 75


state 56

   62 cmd_read: KW_READ TK_IDENTIFIER .

    $default  reduce using rule 62 (cmd_read)


state 57

   30 cmd_func: TK_IDENTIFIER . '(' func_params ')'
   36 expressao: TK_IDENTIFIER .
   37          | TK_IDENTIFIER . '[' expressao ']'

    '['  shift, and go to state 76
    '('  shift, and go to state 77

    $default  reduce using rule 36 (expressao)


state 58

   35 expressao: LIT_INT .

    $default  reduce using rule 35 (expressao)


state 59

   59 print_args: LIT_STRING . print_args

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    LIT_STRING     shift, and go to state 59
    ';'            shift, and go to state 60
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    LIT_STRING     [reduce using rule 49 (expressao)]
    ';'            [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func    go to state 62
    expressao   go to state 63
    print_args  go to state 78


state 60

   61 print_args: ';' .

    $default  reduce using rule 61 (print_args)


state 61

   48 expressao: '~' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 79


state 62

   38 expressao: cmd_func .

    $default  reduce using rule 38 (expressao)


state 63

   39 expressao: expressao . '+' expressao
   40          | expressao . '*' expressao
   41          | expressao . '/' expressao
   42          | expressao . '-' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '=' expressao
   46          | expressao . '&' expressao
   47          | expressao . '|' expressao
   60 print_args: expressao . print_args

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    LIT_STRING     shift, and go to state 59
    '='            shift, and go to state 80
    ';'            shift, and go to state 60
    '+'            shift, and go to state 81
    '*'            shift, and go to state 82
    '/'            shift, and go to state 83
    '-'            shift, and go to state 84
    '<'            shift, and go to state 85
    '>'            shift, and go to state 86
    '&'            shift, and go to state 87
    '|'            shift, and go to state 88
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    LIT_STRING     [reduce using rule 49 (expressao)]
    '='            [reduce using rule 49 (expressao)]
    ';'            [reduce using rule 49 (expressao)]
    '+'            [reduce using rule 49 (expressao)]
    '*'            [reduce using rule 49 (expressao)]
    '/'            [reduce using rule 49 (expressao)]
    '-'            [reduce using rule 49 (expressao)]
    '<'            [reduce using rule 49 (expressao)]
    '>'            [reduce using rule 49 (expressao)]
    '&'            [reduce using rule 49 (expressao)]
    '|'            [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]

    cmd_func    go to state 62
    expressao   go to state 63
    print_args  go to state 89


state 64

   63 cmd_print: KW_PRINT print_args .

    $default  reduce using rule 63 (cmd_print)


state 65

   39 expressao: expressao . '+' expressao
   40          | expressao . '*' expressao
   41          | expressao . '/' expressao
   42          | expressao . '-' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '=' expressao
   46          | expressao . '&' expressao
   47          | expressao . '|' expressao
   64 cmd_return: KW_RETURN expressao .

    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '-'  shift, and go to state 84
    '<'  shift, and go to state 85
    '>'  shift, and go to state 86
    '&'  shift, and go to state 87
    '|'  shift, and go to state 88

    $default  reduce using rule 64 (cmd_return)


state 66

   50 cmd_attr: TK_IDENTIFIER '=' . expressao ';'

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    $default  reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 90


state 67

   51 cmd_attr: TK_IDENTIFIER '[' . expressao ']' '=' expressao ';'

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    $default  reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 91


state 68

   20 block: '{' list_cmds '}' .

    $default  reduce using rule 20 (block)


state 69

   21 list_cmds: cmd list_cmds .

    $default  reduce using rule 21 (list_cmds)


state 70

   26 cmd: cmd_read ';' .

    $default  reduce using rule 26 (cmd)


state 71

   27 cmd: cmd_return ';' .

    $default  reduce using rule 27 (cmd)


state 72

   13 VecList2: init VecList2 .

    $default  reduce using rule 13 (VecList2)


state 73

   18 tail: ',' tipo TK_IDENTIFIER tail .

    $default  reduce using rule 18 (tail)


state 74

   39 expressao: expressao . '+' expressao
   40          | expressao . '*' expressao
   41          | expressao . '/' expressao
   42          | expressao . '-' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '=' expressao
   46          | expressao . '&' expressao
   47          | expressao . '|' expressao
   54 cmd_if: KW_IF '(' expressao . ')' KW_THEN if_block KW_ELSE if_block
   55       | KW_IF '(' expressao . ')' KW_THEN if_block KW_ELSE if_block ';'
   56       | KW_IF '(' expressao . ')' KW_THEN if_block
   57       | KW_IF '(' expressao . ')' KW_THEN if_block ';'

    '='  shift, and go to state 80
    ')'  shift, and go to state 92
    '+'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '-'  shift, and go to state 84
    '<'  shift, and go to state 85
    '>'  shift, and go to state 86
    '&'  shift, and go to state 87
    '|'  shift, and go to state 88


state 75

   39 expressao: expressao . '+' expressao
   40          | expressao . '*' expressao
   41          | expressao . '/' expressao
   42          | expressao . '-' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '=' expressao
   46          | expressao . '&' expressao
   47          | expressao . '|' expressao
   58 cmd_while: KW_WHILE '(' expressao . ')' block

    '='  shift, and go to state 80
    ')'  shift, and go to state 93
    '+'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '-'  shift, and go to state 84
    '<'  shift, and go to state 85
    '>'  shift, and go to state 86
    '&'  shift, and go to state 87
    '|'  shift, and go to state 88


state 76

   37 expressao: TK_IDENTIFIER '[' . expressao ']'

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    $default  reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 94


state 77

   30 cmd_func: TK_IDENTIFIER '(' . func_params ')'

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    ')'       reduce using rule 32 (func_params)
    ')'       [reduce using rule 49 (expressao)]
    $default  reduce using rule 49 (expressao)

    cmd_func     go to state 62
    func_params  go to state 95
    expressao    go to state 96


state 78

   59 print_args: LIT_STRING print_args .

    $default  reduce using rule 59 (print_args)


state 79

   39 expressao: expressao . '+' expressao
   40          | expressao . '*' expressao
   41          | expressao . '/' expressao
   42          | expressao . '-' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '=' expressao
   46          | expressao . '&' expressao
   47          | expressao . '|' expressao
   48          | '~' expressao .

    '='  shift, and go to state 80
    '+'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '-'  shift, and go to state 84
    '<'  shift, and go to state 85
    '>'  shift, and go to state 86
    '&'  shift, and go to state 87
    '|'  shift, and go to state 88

    '='       [reduce using rule 48 (expressao)]
    '+'       [reduce using rule 48 (expressao)]
    '*'       [reduce using rule 48 (expressao)]
    '/'       [reduce using rule 48 (expressao)]
    '-'       [reduce using rule 48 (expressao)]
    '<'       [reduce using rule 48 (expressao)]
    '>'       [reduce using rule 48 (expressao)]
    '&'       [reduce using rule 48 (expressao)]
    '|'       [reduce using rule 48 (expressao)]
    $default  reduce using rule 48 (expressao)


state 80

   45 expressao: expressao '=' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 97


state 81

   39 expressao: expressao '+' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 98


state 82

   40 expressao: expressao '*' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 99


state 83

   41 expressao: expressao '/' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 100


state 84

   42 expressao: expressao '-' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 101


state 85

   43 expressao: expressao '<' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 102


state 86

   44 expressao: expressao '>' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 103


state 87

   46 expressao: expressao '&' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 104


state 88

   47 expressao: expressao '|' . expressao

    TK_IDENTIFIER  shift, and go to state 57
    LIT_INT        shift, and go to state 58
    '~'            shift, and go to state 61

    TK_IDENTIFIER  [reduce using rule 49 (expressao)]
    LIT_INT        [reduce using rule 49 (expressao)]
    '~'            [reduce using rule 49 (expressao)]
    $default       reduce using rule 49 (expressao)

    cmd_func   go to state 62
    expressao  go to state 105


state 89

   60 print_args: expressao print_args .

    $default  reduce using rule 60 (print_args)


state 90

   39 expressao: expressao . '+' expressao
   40          | expressao . '*' expressao
   41          | expressao . '/' expressao
   42          | expressao . '-' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '=' expressao
   46          | expressao . '&' expressao
   47          | expressao . '|' expressao
   50 cmd_attr: TK_IDENTIFIER '=' expressao . ';'

    '='  shift, and go to state 80
    ';'  shift, and go to state 106
    '+'  shift, and go to state 81
    '*'  shift, and go to state 82
    '/'  shift, and go to state 83
    '-'  shift, and go to state 84
    '<'  shift, and go to state 85
    '>'  shift, and go to state 86
    '&'  shift, and go to state 87
    '|'  shift, and go to state 88


state 91

   39 expressao: expressao . '+' expressao
   40          | expressao . '*' expressao
   41          | expressao . '/' expressao
   42          | expressao . '-' expressao
   43          | expressao . '<' expressao
   44          | expressao . '>' expressao
   45          | expressao . '=' expressao
   46          | expressao . '&' expressao
   47          | expressao . '|' expressao
   51 cmd_attr: TK_IDENTIFIER '[' expressao . ']' '=' expressao ';'
